--- a/index.html
+++ b/index.html
@@ -102,10 +102,11 @@
       background-color: #00661a;
       color: #ffffff;
       text-decoration: none;
-      padding: 1.75rem 2.5rem;
+      padding: 1.5rem 2rem;
       border-radius: 1.5rem;
       font-weight: 600;
       transition: background-color 0.3s;
+      text-align: center;
     }
 
     .buttons a:hover {
@@ -123,23 +124,27 @@
     .product-img {
       display: block;
       margin: 0 auto 1rem;
-      max-width: 300px;
+      max-width: 100%;
+      height: auto;
     }
 
     .materia-prima {
       display: flex;
-      align-items: center;
-      gap: 2.5rem;
+      flex-direction: column;
+      gap: 2rem;
       margin-top: 2rem;
       background: rgba(0, 0, 0, 0.6);
       border-radius: 1rem;
-      padding: 4rem;
+      padding: 2rem;
       max-width: 900px;
+      width: 100%;
     }
 
     .materia-prima img {
-      width: 450px;
+      width: 100%;
+      max-width: 450px;
       border-radius: 0.5rem;
+      margin: 0 auto;
     }
 
     .materia-prima div {
@@ -169,6 +174,13 @@
 
     .resultados-grid img:hover {
       transform: scale(1.05);
+    }
+
+    @media (min-width: 768px) {
+      .materia-prima {
+        flex-direction: row;
+        align-items: center;
+      }
     }
   </style>
 </head>
@@ -221,7 +233,6 @@
         <img src="img/resultado3.png" alt="Resultado 3">
       </div>
     </div>
-
   </main>
 
   <footer>
